--- a/app/boards/shields/sp65/sp65.zmk.yml
+++ b/app/boards/shields/sp65/sp65.zmk.yml
@@ -2,7 +2,7 @@ file_format: "1"
 id: sp65
 name: SP65
 type: shield
-url: https://github.com/Tekunalogy/zmk-config
+url: https://github.com/Tekunalogy/zmk
 requires: [pro_micro]
 exposes: []
 features:
